fixed spacing and deleted picture

--- a/assets/css/common/main.css
+++ b/assets/css/common/main.css
@@ -28,7 +28,7 @@
 }
 
 .social-icons {
-    padding: 12px 0;
+    padding: 10px 0px 50px 0px;
 }
 
 .social-icons a:not(:last-of-type) {
