--- a/assets/css/common/post-entry.css
+++ b/assets/css/common/post-entry.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     justify-content: start;
-    min-height: 300px;
+    min-height: 280px;
     margin: var(--gap) 0 calc(var(--gap) * -1.5) 0;
 }
 
@@ -20,7 +20,7 @@
 }
 
 .first-entry .entry-content {
-    margin: 14px 0;
+    margin: 14px 0px;
     font-size: 16px;
     -webkit-line-clamp: 3;
 }
